# tak

./: .dockerignore  .gitignore  Caddyfile  Caddyfile.prod  Cargo.toml  Dioxus.toml  Dockerfile  build_run.sh  docker-compose.prod.yml  docker-compose.yml  index.html  out.txt  serve.sh  transfer_docker.ps1  transfer_files.ps1
assets/styling/: auth.css  auth.scss  board.css  board.scss  computer.css  create_room.css  create_room.scss  home.css  home.scss  main.css  main.scss  navbar.css  navbar.scss  rooms.scss  seeks.scss
assets/styling/settings/: _colors.scss  _params.scss  defaults.scss
assets/styling/views/: colors.scss  history.scss  more.scss  review_board.scss  rules.scss  stats.scss  themes.scss
assets/themes/: aether_theme.json  bubblegum_theme.json  ignis_theme.json  jungle_theme.json
scripts/: build_worker.ps1  docker_local.ps1  serve.ps1  surrealdb.ps1  transfer_docker.ps1
src/: future.rs  main.rs  storage.rs
src/components/: clock.rs  color_applier.rs  mod.rs  nav_button.rs  notifications.rs  playtak_client.rs  pubsub_client.rs  tak_board.rs  tak_board_state.rs  tak_clock.rs  tak_engine.rs  tak_flats_counter.rs  tak_game_actions.rs  tak_hand.rs  tak_piece.rs  tak_tile.rs  tak_websocket.rs  tak_win_modal.rs
src/server/: auth.rs  db.rs  error.rs  mod.rs  player.rs  room.rs  websocket.rs
src/server/api/: auth_client.rs  matches.rs  mod.rs  room.rs  seek.rs
src/server/internal/: auth.rs  cache.rs  db.rs  dto.rs  matches.rs  mod.rs  player.rs  pub_sub.rs  room.rs  seek.rs  websocket.rs
src/tak/: action.rs  api.rs  mod.rs  ptn.rs  timed.rs
src/views/: auth.rs  create_room.rs  home.rs  mod.rs  more.rs  navbar.rs  play.rs  play_computer.rs  puzzles.rs  review_board.rs  rooms.rs  seeks.rs
src/views/more/: colors.rs  history.rs  rules.rs  settings.rs  stats.rs
tak-core/: Cargo.toml
tak-core/src/: action.rs  board.rs  coord.rs  game.rs  history.rs  lib.rs  movegen.rs  ptn.rs  time.rs  tps.rs  ui.rs
takumi/: Cargo.toml  build.rs
takumi-worker/: Cargo.toml
takumi-worker/src/: lib.rs
takumi/src/: game.rs  lib.rs  minimax.rs  movegen.rs  time_control.rs  worker.rs  zobrist.rs
ws-pubsub/: Cargo.toml
ws-pubsub/src/: client.rs  client2.rs  client3.rs  future.rs  lib.rs  logger.rs  message.rs  server.rs  topic.rs
