[package]
name = "tak"
version = "0.1.0"
authors = ["Christian-Schefe <schefechristian@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
dioxus-free-icons = { version = "0.9", features = ["font-awesome-solid"] }
regex = "1.11.1"
web-sys = { version = "0.3.77", features = ["HtmlElement"] }
tokio = { version = "1.45.1", features = ["time", "sync", "rt"], optional = true }
gloo = { version = "0.11.0", features = ["timers", "futures"] }
axum = { version = "0.7.9", features = ["ws"], optional = true }
axum-extra = { version = "0.9.6", optional = true, features = ["typed-header"] }
futures-util = { version = "0.3.31" }
uuid = { version = "1.17.0", features = ["v4"], optional = true }
dioxus-fullstack = { version = "0.6.3" }
dioxus-cli-config = { version = "0.6.3", optional = true }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen-futures = "0.4.50"
headers = "0.4.1"
argon2 = "0.5"
surrealdb = { version = "2.3.6", optional = true }
thiserror = "2.0.12"
tower-cookies = { version = "0.10.0", features = ["axum-core"], optional = true }
rand = "0.8.5"

[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tower-cookies", "dep:surrealdb", "dioxus-fullstack/axum", "dep:axum", "dep:tokio", "dep:uuid", "dioxus-cli-config", "dep:axum-extra"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
