[workspace]
members = ["tak-core", "takumi", "takumi-worker", "ws-pubsub"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Christian-Schefe <schefechristian@gmail.com>"]

[package]
name = "tak"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
dioxus-free-icons = { version = "0.9", features = [
    "font-awesome-solid",
    "ionicons",
] }
web-sys = { version = "0.3.77", features = [
    "HtmlDocument",
    "Clipboard",
    "Window",
    "Navigator",
    "Permissions",
    "CssStyleDeclaration",
] }
tokio = { version = "1.45.1", features = [
    "time",
    "sync",
    "rt",
], optional = true }
gloo = { version = "0.11.0", features = ["timers", "futures"] }
gloo-worker = { version = "0.5.0", features = ["futures"] }
axum = { version = "0.7.9", features = ["ws"], optional = true }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
futures-util = { version = "0.3.31" }
uuid = { version = "1.17.0", features = ["v4"], optional = true }
dioxus-fullstack = { version = "0.6.3" }
dioxus-cli-config = { version = "0.6.3", optional = true }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen-futures = "0.4.50"
wasm-bindgen = "0.2.100"
headers = "0.4.1"
argon2 = "0.5"
surrealdb = { version = "2.3.6", optional = true }
thiserror = "2.0.12"
tower-http = { version = "0.6.6", optional = true, features = ["fs"] }
rand = "0.8.5"
dashmap = { version = "6.1.0", optional = true }
tak-core = { path = "tak-core", version = "*", features = ["serde"] }
takumi = { path = "takumi", version = "*", features = ["serde"] }
moka = { version = "0.12.10", features = ["future"], optional = true }
fixed-map = "0.9.5"
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = { version = "9.3.1", optional = true }
directories = "6.0.0"
tokio-tungstenite-wasm = { version = "0.6.0", features = [
    "rustls-tls-native-roots",
] }
ws-pubsub = { path = "ws-pubsub", version = "*", features = ["dioxus"] }

[features]
_not_web = ["dep:tokio"]

web = ["dioxus/web", "tak-core/wasm", "ws-pubsub/client-wasm"]
desktop = ["dioxus/desktop", "tak-core/wasm", "_not_web", "ws-pubsub/client"]
mobile = ["dioxus/mobile", "tak-core/wasm", "_not_web", "ws-pubsub/client"]
server = [
    "_not_web",
    "dioxus/server",
    "dioxus-fullstack/axum",
    "dep:dashmap",

    "dep:surrealdb",
    "dep:axum",
    "dep:uuid",
    "dioxus-cli-config",

    "dep:moka",
    "dep:tower-http",
    "dep:jsonwebtoken",
    "ws-pubsub/client",
    "ws-pubsub/server",
]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
