[package]
name = "tak-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "*", features = ["derive"], optional = true }
serde_json = { version = "*", optional = true }
dioxus = { version = "*", optional = true }
fixed-map = { version = "*" }
chrono = { version = "*" }

[features]
wasm = ["dep:dioxus"]
serde = ["dep:serde", "dep:serde_json"]
