[package]
name = "takumi-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
futures = "*"
gloo-worker = { version = "*", features = ["futures"] }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
web-sys = { version = "*", features = ["console"] }
takumi = { path = "../takumi", features = ["serde"] }

[lib]
crate-type = ["cdylib", "rlib"]
