[package]
name = "takumi"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
futures = "*"
gloo-worker = { version = "*", features = ["futures"] }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
web-sys = { version = "*", features = ["console"] }
serde = { version = "*", features = ["derive"], optional = true }
serde_json = { version = "*", optional = true }

[build-dependencies]
rand = { version = "*" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
serde = ["dep:serde", "dep:serde_json"]
