[package]
name = "ws-pubsub"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1.88"
axum = { version = "*", features = ["ws"], optional = true }
tokio-tungstenite-wasm = { version = "*", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "*" }
futures-util = { version = "*" }
futures = { version = "*" }
uuid = { version = "*", features = ["v4"], optional = true }
dashmap = { version = "*", optional = true }
tokio = { version = "*", features = [
    "sync",
    "rt-multi-thread",
], optional = true }
futures-intrusive = { version = "*" }

[features]
client = ["dep:tokio-tungstenite-wasm"]
server = ["dep:axum", "dep:uuid", "dep:dashmap", "dep:tokio"]
