[package]
name = "ws-pubsub"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait = "*"
axum = { version = "*", features = ["ws"], optional = true }
tokio-tungstenite-wasm = { version = "*", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "*" }
futures-util = { version = "*" }
futures = { version = "*" }
uuid = { version = "*", features = ["v4", "js"] }
dashmap = { version = "*", optional = true }
tokio = { version = "*", features = [
    "sync",
    "rt-multi-thread",
], optional = true }
futures-intrusive = { version = "*" }
wasm-bindgen-futures = { version = "*", optional = true }
dioxus = { version = "0.7.0-alpha.3", optional = true }
gloo = { version = "*", optional = true, features = ["timers"] }

[features]
client-wasm = ["client", "dep:wasm-bindgen-futures", "dep:gloo"]
client-native = ["client", "dep:tokio"]
client = ["dep:tokio-tungstenite-wasm"]
server = ["dep:axum", "dep:dashmap", "dep:tokio"]
dioxus = ["dep:dioxus"]
